Adding stats and refactoring router layer
